objects/sharinpix__Visit__c.object
<CustomObject>
    <description>A SharinPix object for Visits</description>
    <fields>
        <fullName>sharinpix__Comment__c</fullName>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sharinpix__ParentVisit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Visit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>sharinpix__Visit__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Combined</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>sharinpix__Visit__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sharinpix__VisitDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Visit Date</label>
        <type>DateTime</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>sharinpix__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>sharinpix__Comment__c</columns>
        <columns>sharinpix__VisitDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>sharinpix__Combined</fullName>
        <columns>NAME</columns>
        <columns>sharinpix__VisitDate__c</columns>
        <columns>sharinpix__Comment__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sharinpix__Visit__c.sharinpix__Combined</value>
        </filters>
        <label>Combined</label>
    </listViews>
    <listViews>
        <fullName>sharinpix__SingleVisits</fullName>
        <columns>NAME</columns>
        <columns>sharinpix__VisitDate__c</columns>
        <columns>sharinpix__Comment__c</columns>
        <columns>sharinpix__ParentVisit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sharinpix__Visit__c.sharinpix__Single</value>
        </filters>
        <label>Single Visits</label>
    </listViews>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Visit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <recordTypes>
        <fullName>sharinpix__Combined</fullName>
        <active>true</active>
        <description>Use for group of single visits.</description>
        <label>Combined</label>
    </recordTypes>
    <recordTypes>
        <fullName>sharinpix__Single</fullName>
        <active>true</active>
        <description>Use for a one-time visit.</description>
        <label>Single</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sharinpix__CombinedVisitParentNul</fullName>
        <active>true</active>
        <description>A Combined Visit cannot have a parent.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Combined&apos;, NOT(ISBLANK( sharinpix__ParentVisit__c )))</errorConditionFormula>
        <errorMessage>A Combined Visit cannot have a parent.</errorMessage>
    </validationRules>
</CustomObject>